[package]
name = "farm_gatherer"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
env_logger = "0.11.8"
thirtyfour = "0.36.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.6.0"
fantoccini = "0.22.0"
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
