[package]
name = "farm_gatherer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.6.0"
fantoccini = "0.22.0"
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.49", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
